--- a/ConvNN/Makefile
+++ b/ConvNN/Makefile
@@ -4,7 +4,7 @@ PWD = $(shell pwd)
 OBJ_DIR := obj
 
 # 所有的 .c 和 .cpp 源文件
-SRCS := Thesis.cpp OpenCL.cpp ReadCifar10.cpp ConvNN.cpp Layer.cpp common/err_code.cpp
+SRCS := Thesis.cpp OpenCL.cpp ReadCifar10.cpp ReadMnist.cpp ConvNN.cpp MiniVGG.cpp Layer.cpp common/err_code.cpp
 
 # 所有的目標文件
 OBJS := $(addprefix $(OBJ_DIR)/, $(patsubst %.c,%.o,$(filter %.c,$(SRCS))) $(patsubst %.cpp,%.o,$(filter %.cpp,$(SRCS))))
@@ -16,7 +16,7 @@ TARGET := my_program
 CC := gcc
 CXX := g++
 CFLAGS := -Wall -Werror
-CXXFLAGS := -std=c++11 -I$(PWD)/common
+CXXFLAGS := -std=c++14 -I$(PWD)/common # Upgrade from 11 to 14
 
 # OpenCV 和 OpenCL 的相關庫
 OPENCV_LIBS := $(shell pkg-config --libs opencv4)
